Add counter input, fix diacart styles

--- a/src/scss/components/_diacart-btn.scss
+++ b/src/scss/components/_diacart-btn.scss
@@ -14,6 +14,11 @@
   border-radius: 3px;
   transition: all .24s ease;
 
+  * {
+    user-select: none;
+    pointer-events: none;
+  }
+
   &--medium {
     padding: 10px 16px;
   }
