--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,10 @@
 @import "./variables";
 @import "./mixins";
 @import "./grid";
+@import "./font-sizes";
 
+@import "./components/diacart-btn";
 @import "./components/diacart";
 @import "./components/diacart-item";
-@import "./components/diacart-btn";
+@import "./components/diacart-counter";
+@import "./components/diacart-empty";
