--- a/src/scss/_placeholders.scss
+++ b/src/scss/_placeholders.scss
@@ -27,3 +27,9 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+
+%bg-cover {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
