Hide footer if empty cart

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,8 +5,9 @@
 @import "./grid";
 @import "./font-sizes";
 
-@import "./components/diacart-btn";
 @import "./components/diacart";
+@import "./components/diacart-btn";
 @import "./components/diacart-item";
 @import "./components/diacart-counter";
 @import "./components/diacart-empty";
+@import "./components/diacart-hidden";
