--- a/src/scss/components/_diacart-item.scss
+++ b/src/scss/components/_diacart-item.scss
@@ -7,61 +7,59 @@
   &:not(:first-child) {
     border-top: 1px solid $diacart-color-gray--light;
   }
-  
+
   &__image-col {
     display: block;
     width: 175px;
     max-width: 100%;
     max-height: 250px;
     overflow: hidden;
-    
-    @include bp-from( md ) {
+
+    @include bp-from(md) {
       width: 300px;
       max-height: 300px;
     }
   }
 
-    &__image {
-      display: block;
-      width: auto;
-      max-width: 100%;
-      height: auto;
+  &__image {
+    display: block;
+    width: auto;
+    max-width: 100%;
+    height: auto;
 
-      @include bp-from(sm) {
-        width: 100%;
-      }
+    @include bp-from(sm) {
+      width: 100%;
     }
+  }
 
   &__text-col {
     padding-right: 50px + $diacart-base-offset;
     width: 100%;
     min-width: 300px;
-    max-height: 300px;
 
-    @include bp-from( md ) {
+    @include bp-from(md) {
       width: 300px;
     }
   }
 
-    &__title {
-      @extend %font-size-3;
-      display: block;
-      margin: $diacart-base-offset 0;
-      // font-weight: bold;
-      text-decoration: none;
-      color: $diacart-color-dark;
-    }
+  &__title {
+    @extend %font-size-3;
+    display: block;
+    margin: $diacart-base-offset 0;
+    // font-weight: bold;
+    text-decoration: none;
+    color: $diacart-color-dark;
+  }
 
-    &__price {
-      @extend %font-size-2;
-      margin: 0 0 $diacart-base-offset 0;
-      font-family: $diacart-numbers-font;
-      font-weight: bold;
-    }
+  &__price {
+    @extend %font-size-2;
+    margin: 0 0 $diacart-base-offset 0;
+    font-family: $diacart-numbers-font;
+    font-weight: bold;
+  }
 
-    &__quantity {
+  &__quantity {}
 
-    }
   &__remove-btn {
     @extend .diacart-btn;
     @extend %bg-cover;
