--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "./mixins";
 @import "./grid";
 @import "./font-sizes";
+@import "./animations";
 
 @import "./components/diacart";
 @import "./components/diacart-btn";
