--- a/src/scss/components/_diacart-item.scss
+++ b/src/scss/components/_diacart-item.scss
@@ -3,6 +3,7 @@
   position: relative;
   padding: $diacart-base-offset 0;
   min-height: 200px + $diacart-base-offset;
+  animation: diacart-appearance .24s ease;
 
   &:not(:first-child) {
     border-top: 1px solid $diacart-color-gray--light;
