Update diacart style, add clear button

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 // font
-$diacart-base-font: 'Verdana', sans-serif !default;
+$diacart-base-font: "Trebuchet MS", Helvetica, sans-serif !default;
 $diacart-numbers-font: $diacart-base-font !default;
 $diacart-buttons-font: $diacart-base-font !default;
 $diacart-base-font-size: 16px !default;
