--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -2,8 +2,13 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: $diacart-base-offset;
-  padding-right: $diacart-base-offset;
+  padding-left: $diacart-base-offset * 1.5;
+  padding-right: $diacart-base-offset * 1.5;
+
+  @include bp-from(md) {
+    padding-left: $diacart-base-offset * 2;
+    padding-right: $diacart-base-offset * 2;
+  }
 }
 
 .diacart-grid {
@@ -28,6 +33,30 @@
     &--v-gutter {
       padding-top: 0;
       padding-bottom: 0;
+    }
+  }
+
+  &--h {
+    &-start {
+      justify-content: flex-start;
+    }
+    &-center {
+      justify-content: center;
+    }
+    &-end {
+      justify-content: flex-end;
+    }
+  }
+
+  &--v {
+    &-start {
+      align-items: flex-start;
+    }
+    &-center {
+      align-items: center;
+    }
+    &-end {
+      align-items: flex-end;
     }
   }
 
