--- a/src/scss/components/_diacart-btn.scss
+++ b/src/scss/components/_diacart-btn.scss
@@ -31,6 +31,15 @@
     }
   }
 
+  &--default {
+    color: $diacart-color-dark;
+    border: 1px solid rgba($diacart-color-dark, .5);
+    background-color: transparent;
+    &:hover {
+      border-color: $diacart-color-dark;
+    }
+  }
+
   &--error {
     color: #fff;
     background-color: $diacart-color-error;
