--- a/lib/diacart.css
+++ b/lib/diacart.css
@@ -21,11 +21,10 @@
        -moz-box-sizing: inherit;
             box-sizing: inherit; }
 
-.diacart-item__remove-btn {
+.diacart-item__image, .diacart-item__remove-btn {
   background-repeat: no-repeat;
   -webkit-background-size: cover;
      -moz-background-size: cover;
-       -o-background-size: cover;
           background-size: cover;
   background-position: 50%; }
 
@@ -33,8 +32,8 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px; }
+  padding-left: 22.5px;
+  padding-right: 22.5px; }
 
 .diacart-grid {
   display: -webkit-box;
@@ -60,6 +59,42 @@
     .diacart-grid--no-gutter .diacart-grid-col--v-gutter {
       padding-top: 0;
       padding-bottom: 0; }
+  .diacart-grid--h-start {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+       -moz-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
+  .diacart-grid--h-center {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .diacart-grid--h-end {
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+       -moz-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
+  .diacart-grid--v-start {
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+       -moz-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+  .diacart-grid--v-center {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .diacart-grid--v-end {
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+       -moz-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end; }
   .diacart-grid-col {
     padding-left: 15px;
     padding-right: 15px;
@@ -93,7 +128,7 @@
 .diacart__title {
   font-size: 24px; }
 
-.diacart__total-price [data-diacart-total-price-container], .diacart-item__price {
+.diacart__total-price-accent, .diacart-item__price {
   font-size: 20px; }
 
 .diacart-item__title, .diacart-empty__title {
@@ -102,26 +137,71 @@
 .diacart {
   font-size: 16px; }
 
+@-webkit-keyframes diacart-appearance {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px); }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0); } }
+
+@-moz-keyframes diacart-appearance {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(30px);
+         transform: translateY(30px); }
+  100% {
+    -moz-transform: translateY(0);
+         transform: translateY(0); } }
+
+@-o-keyframes diacart-appearance {
+  0% {
+    opacity: 0;
+    -o-transform: translateY(30px);
+       transform: translateY(30px); }
+  100% {
+    -o-transform: translateY(0);
+       transform: translateY(0); } }
+
+@keyframes diacart-appearance {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+       -moz-transform: translateY(30px);
+         -o-transform: translateY(30px);
+            transform: translateY(30px); }
+  100% {
+    -webkit-transform: translateY(0);
+       -moz-transform: translateY(0);
+         -o-transform: translateY(0);
+            transform: translateY(0); } }
+
 .diacart {
-  padding: 30px 15px;
-  font-family: "Verdana", sans-serif;
+  padding: 30px 0;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
   color: #1d1d1d;
   min-width: 250px; }
   .diacart__header {
-    border-bottom: 1px solid #ededee;
-    padding: 0 0 15px 0; }
+    border-bottom: 1px solid #ededee; }
+    .diacart__header-col {
+      margin-bottom: 15px; }
   .diacart__title {
     font-weight: bold; }
   .diacart__footer {
     text-align: right;
     border-top: 1px solid #ededee;
-    padding: 15px -12px 0 0 0; }
+    padding: 15px -12px 0 0 0;
+    -webkit-animation: diacart-appearance .24s ease;
+       -moz-animation: diacart-appearance .24s ease;
+         -o-animation: diacart-appearance .24s ease;
+            animation: diacart-appearance .24s ease; }
     .diacart__footer-container {
       margin: 0 -12px; }
   .diacart__total-price, .diacart__order-btn {
     margin: 12px 12px 0; }
-  .diacart__total-price [data-diacart-total-price-container] {
-    font-family: "Verdana", sans-serif;
+  .diacart__total-price-accent {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
     font-weight: bold; }
 
 .diacart-btn, .diacart-item__remove-btn, .diacart-counter__btn {
@@ -129,7 +209,7 @@
   position: relative;
   z-index: 1;
   display: inline-block;
-  font-family: "Verdana", sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
   font-size: 14px;
   overflow: hidden;
   -webkit-appearance: none;
@@ -158,6 +238,12 @@
     background-color: #2196f3; }
     .diacart-btn--primary:hover {
       background-color: #0c84e4; }
+  .diacart-btn--default {
+    color: #1d1d1d;
+    border: 1px solid rgba(29, 29, 29, 0.5);
+    background-color: transparent; }
+    .diacart-btn--default:hover {
+      border-color: #1d1d1d; }
   .diacart-btn--error {
     color: #fff;
     background-color: #f44336; }
@@ -167,37 +253,49 @@
 .diacart-item {
   position: relative;
   padding: 15px 0;
-  min-height: 215px; }
+  min-height: 215px;
+  -webkit-animation: diacart-appearance .24s ease;
+     -moz-animation: diacart-appearance .24s ease;
+       -o-animation: diacart-appearance .24s ease;
+          animation: diacart-appearance .24s ease; }
   .diacart-item:not(:first-child) {
     border-top: 1px solid #ededee; }
   .diacart-item__image-col {
     display: block;
-    width: 175px;
     max-width: 100%;
-    max-height: 250px;
     overflow: hidden; }
   .diacart-item__image {
     display: block;
-    width: auto;
+    width: 100px;
+    height: 100px;
     max-width: 100%;
-    height: auto; }
+    margin: 0 auto; }
   .diacart-item__text-col {
-    padding-right: 65px;
-    width: 100%;
-    min-width: 300px; }
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%; }
   .diacart-item__title {
     display: block;
-    margin: 15px 0;
+    margin: 0;
+    font-weight: bold;
     text-decoration: none;
     color: #1d1d1d; }
   .diacart-item__price {
-    margin: 0 0 15px 0;
-    font-family: "Verdana", sans-serif;
-    font-weight: bold; }
+    margin: 0;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: right; }
   .diacart-item__remove-btn {
-    position: absolute;
-    top: 30px;
-    right: 0;
     width: 28px;
     height: 28px;
     opacity: 0.3;
@@ -208,6 +306,12 @@
     transition: opacity .24s ease; }
     .diacart-item__remove-btn:hover {
       opacity: 1; }
+  .diacart-item__options {
+    margin-top: auto;
+    padding-top: 1rem; }
+  .diacart-item-option__title {
+    margin-bottom: 0.75rem;
+    font-weight: 600; }
 
 .diacart-counter {
   display: inline-block;
@@ -234,20 +338,26 @@
 .diacart-hidden {
   display: none; }
 
-@media (min-width: 576px) {
-      .diacart-item__image {
-        width: 100%; } }
-
 @media (min-width: 768px) {
+    .diacart-wrapper {
+      padding-left: 30px;
+      padding-right: 30px; }
     .diacart__title {
       font-size: 28px; }
-    .diacart__total-price [data-diacart-total-price-container], .diacart-item__price {
+    .diacart__total-price-accent, .diacart-item__price {
       font-size: 24px; }
-      .diacart-item__image-col {
-        width: 300px;
-        max-height: 300px; }
+      .diacart-item__image {
+        width: 175px;
+        height: 175px; }
       .diacart-item__text-col {
         width: 300px; } }
+
+@media screen and (max-width: 420px) {
+      .diacart-item__image-col {
+        width: 100%; }
+      .diacart-item__image {
+        width: 200px;
+        height: 200px; } }
 
 
 /*# sourceMappingURL=diacart.css.map*/
