--- a/src/scss/components/_diacart-btn.scss
+++ b/src/scss/components/_diacart-btn.scss
@@ -25,8 +25,10 @@
 
   &--primary {
     color: #fff;
+    border: 1px solid $diacart-color-primary;
     background-color: $diacart-color-primary;
     &:hover {
+      border-color: $diacart-color-primary--dark;
       background-color: $diacart-color-primary--dark;
     }
   }
